--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
         <section>
             <h2>About Me</h2>
             <p>
-                This is a short paragraph about me
+                Hello! I'm Freddy Quito, a passionate web developer with a strong interest in creating user-friendly and 
+                visually apearing websites. I have experience in HTML and CSS. And I am always interested in learning new 
+                technologies and languagues to enhance my skills as a web developer!
             </p>
         </section>
         <section>
@@ -69,4 +71,6 @@
 
     <footer> Freddy Quito Porfolio &copy; 2023</footer>
 </body>
-</html>
+</html> 
+
+
