adds heading border solid line

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </div>
       </section>
       <section id="work-2">
-        <h2>Work</h2>
+        <h2 class="section-right">Work</h2>
         <div class="projects">
           <div class="imageBox flex first">
             <a
@@ -106,7 +106,7 @@
         </div>
       </section>
       <section id="contact-me-3">
-        <h2>Contact Me</h2>
+        <h2 class="section-right">Contact Me</h2>
         <div>
           <nav>
             <a href="mailto:email@email.com">Email</a>
@@ -117,6 +117,6 @@
       </section>
     </main>
 
-    <footer>Freddy Quito Porfolio &copy; 2023</footer>
+    <footer>Freddy Quito Portfolio &copy; 2023</footer>
   </body>
 </html>
